# Kavach-AI

./: .gitignore  AGENTS.md  README.md
.opencode/plans/: mail-alerts-implementation.md
backend/: AGENTS.md  Cargo.toml
backend/migrations/: 0001_initial.sql  0002_initial.sql  0004_alert_sent.sql  0005_incident_status.sql  0006_incident_id_fix.sql  0007_analysis_incident_unique.sql  0008_citizen_parity.sql
backend/src/: main.rs  state.rs
backend/src/models/: analysis.rs  incident.rs  mod.rs  resource.rs  user.rs
backend/src/repository/: incidents.rs  mod.rs  reports.rs  users.rs
backend/src/routes/: auth.rs  chat.rs  dashboard.rs  incidents.rs  mod.rs  websocket.rs
backend/src/services/: ai_client.rs  auth.rs  auth_extractor.rs  google_auth.rs  jwt.rs  mod.rs  notifier.rs  otp.rs  postgres.rs  scheduler.rs
client/: .env.example  AGENTS.md
client/src/: App.jsx  config.js  index.css
client/src/api/: axios.js  varunaApi.js
client/src/utils/: geolocation.js
mailservice/: .env.example  AGENTS.md  Dockerfile  main.py  pyproject.toml
mailservice/app/: config.py  emailer.py  geolocation.py  main.py  router.py  schemas.py
mailservice/app/templates/: alert_email_html.py
ml-services/: .env.example  AGENTS.md  Dockerfile  README.md  requirements.txt
ml-services/app/: .gitignore  main.py
ml-services/app/agents/: analysis_agent.py  tools.py
ml-services/app/api/: analytics.py  analyze.py  chat.py  health.py  sources.py  verify.py
ml-services/app/connectors/: base.py  bluesky.py  firms.py  gdacs.py  gdelt_news.py  indian_news.py  nasa.py  reddit.py  (+4 more)
(+70 files in other folders)
