[project]
name = "mailservice"
version = "0.1.0"
description = "KAVACH emergency alert email service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]
